--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
         <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
+        <script src="../bower_components/angular-resource/angular-resource.js"></script>
         <!-- endbuild -->
         <script src="js/script.js"></script>
 
