--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
         <!-- build:css css/vendor.css -->
         <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
         <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
+        <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
         <!-- endbuild -->
         <link rel="stylesheet" href="css/style.css">
 
@@ -28,7 +29,7 @@
             your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div ng-view></div>
+        <div class="container" ng-view></div>
 
         <!-- build:js js/vendor.js -->
         <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
