--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/normalize.css">
         <link rel="stylesheet" href="../bower_components/html5-boilerplate/dist/css/main.css">
         <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css">
         <!-- endbuild -->
         <link rel="stylesheet" href="css/style.css">
 
