--- a/app/index.html
+++ b/app/index.html
@@ -30,13 +30,15 @@
             your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="container" ng-view></div>
+        <div class="container-fluid" ng-view></div>
 
         <!-- build:js js/vendor.js -->
         <script src="../bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
         <script src="../bower_components/angular-resource/angular-resource.js"></script>
+        <script src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+        <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <!-- endbuild -->
         <script src="js/script.js"></script>
 
